force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Deny_Reasons__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Deny_Reasons__c</fullName>
    <label>Deny Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CLQ_Recommendation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Enforcement</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Rehabilitation Standards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>