force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Document_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Document_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically set to True when Complete Document Review is clicked</description>
    <label>Document Review Complete</label>
    <type>Checkbox</type>
</CustomField>