force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Effective_Date_of_Closure_formula__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Effective_Date_of_Closure_formula__c</fullName>
    <formula>IF(CLQ_Last_Day_of_Operation__c &lt;= DATEVALUE(Submission_Date1__c), DATEVALUE(Submission_Date1__c) + 1, CLQ_Last_Day_of_Operation__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date of Closure</label>
    <type>Date</type>
</CustomField>