force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Estimated_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Estimated_Enrollment__c</fullName>
    <label>Estimated Enrollment</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>