force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Existing_Child_Care_Business__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Existing_Child_Care_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you purchasing an existing child care business?</description>
    <inlineHelpText>Are you purchasing an existing child care business?</inlineHelpText>
    <label>Existing Child Care Business</label>
    <type>Checkbox</type>
</CustomField>