force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Existing_License_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Existing_License_Number__c</fullName>
    <description>If purchasing existing child care business, provide the license number for that business/program.</description>
    <inlineHelpText>If purchasing existing child care business, provide the license number for that business/program.</inlineHelpText>
    <label>Existing License Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>