force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>