force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_External_User_Can_Edit__c.field-meta.xml
<CustomField>
    <fullName>CLQ_External_User_Can_Edit__c</fullName>
    <description>The external user can make modifications when the application is in these states.</description>
    <formula>AND( CONTAINS( RecordType.Name, &quot;Application&quot;),
OR(
/*ISPICKVAL(CLQ_Transaction_Status__c,&quot;Not Submitted&quot;),*/
ISPICKVAL(CLQ_Transaction_Status__c,&quot;Submitted&quot;),
ISPICKVAL(CLQ_Transaction_Status__c,&quot;Under Reviewer Review&quot;),
ISPICKVAL(CLQ_Transaction_Status__c,&quot;Resubmitted&quot;),
ISPICKVAL(CLQ_Transaction_Status__c,&quot;Returned for Revision&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XExternal User Can Edit</label>
    <type>Checkbox</type>
</CustomField>