force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Fee_Amount__c</fullName>
    <label>Fee Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>