force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Fee_Paid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fee Paid</label>
    <type>Checkbox</type>
</CustomField>