force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Food_Service__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Food_Service__c</fullName>
    <label>Food Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Food Service License</fullName>
            </value>
            <value>
                <fullName>Food Service License Exemption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>