force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Form_Complete_Not_Paid__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Form_Complete_Not_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Complete Not Paid</label>
    <type>Checkbox</type>
</CustomField>