force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Full_Day_Option_Offered__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Full_Day_Option_Offered__c</fullName>
    <label>Full Day Option Offered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>