force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Full_Part_Time_Options_Global__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Full_Part_Time_Options_Global__c</fullName>
    <description>Serves renamed to Full/Part -Time Options</description>
    <label>Full/Part -Time Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLQ_Serves</valueSetName>
    </valueSet>
</CustomField>