force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Funding_Source__c</fullName>
    <label>Funding Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>