force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>CLQ_Inspection__c</referenceTo>
    <relationshipName>Program_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>