force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Inspection_Created__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True when PT has an associated Inspection</description>
    <label>Inspection Created</label>
    <type>Checkbox</type>
</CustomField>