force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Is_the_Day_Camp_ACA_Certified__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Is_the_Day_Camp_ACA_Certified__c</fullName>
    <label>Is the Day Camp ACA Certified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>