force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Last_Day_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Last_Day_of_Operation__c</fullName>
    <label>Last Day of Operation</label>
    <type>Date</type>
</CustomField>