force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Lead_Based_Paint__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Lead_Based_Paint__c</fullName>
    <label>Lead Based Paint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>