force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Level_of_Radon_Gas__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Level_of_Radon_Gas__c</fullName>
    <description>If radon gas selected, then provide level of radon gas.</description>
    <inlineHelpText>If radon gas selected, then provide level of radon gas.</inlineHelpText>
    <label>Level of Radon Gas</label>
    <length>128</length>
    <type>Text</type>
</CustomField>