force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Liability_Insurance__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Liability_Insurance__c</fullName>
    <label>Liability Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>