force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_License_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_License_Registration_Status__c</fullName>
    <label>License / Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensed/Certified</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>