force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_License_Revoked_Previously__c.field-meta.xml
<CustomField>
    <fullName>CLQ_License_Revoked_Previously__c</fullName>
    <description>Was your license ever revoked?</description>
    <inlineHelpText>Was your license ever revoked?</inlineHelpText>
    <label>Was your license ever revoked?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>