force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Licensed_out_of_state_last_5_years__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Licensed_out_of_state_last_5_years__c</fullName>
    <description>Within the past five years, have you been certified/licensed as a child care provider by another state? *</description>
    <inlineHelpText>Within the past five years, have you been certified/licensed as a child care provider by another state? *</inlineHelpText>
    <label>Licensed out of state last 5 years</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>