force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Mailing_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Mailing_Street_Address__c</fullName>
    <label>Mailing Street Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>