force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Mailing_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Mailing_ZipCode__c</fullName>
    <label>Mailing ZipCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>