force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Manager_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Manager_s_Email_Address__c</fullName>
    <label>Manager Email Address</label>
    <type>Email</type>
</CustomField>