force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Materials_stored_in_Tanks__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Materials_stored_in_Tanks__c</fullName>
    <label>Materials stored in Tanks</label>
    <type>TextArea</type>
</CustomField>