force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Materials_stored_in_undergrnd_tanks__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Materials_stored_in_undergrnd_tanks__c</fullName>
    <description>If select &quot;Underground storage of Hazards&quot;, provide detail of the materials stored.</description>
    <inlineHelpText>If select &quot;Underground storage of Hazards&quot;, provide detail of the materials stored.</inlineHelpText>
    <label>Materials stored in underground tanks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>