force-app/main/default/objects/CLQ_Program_Transaction__c/fields/clq_message_process_email__c.field-meta.xml
<CustomField>
    <fullName>clq_message_process_email__c</fullName>
    <defaultValue>$Setup.CLQ_Message_Emails__c.CLQ_Message_Process_Email__c</defaultValue>
    <label>message process email</label>
    <type>Email</type>
</CustomField>