force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Name_of_Child_Day_Camp__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Name_of_Child_Day_Camp__c</fullName>
    <label>Name of Child Day Camp</label>
    <type>TextArea</type>
</CustomField>