force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Name_of_Day_Camp_on_ACA_Certificate__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Name_of_Day_Camp_on_ACA_Certificate__c</fullName>
    <label>Name of Day Camp on ACA Certificate</label>
    <length>250</length>
    <type>Text</type>
</CustomField>