force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_Approved_All_Groups_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_Approved_All_Groups_Capacity__c</fullName>
    <inlineHelpText>Total for All Age Groups</inlineHelpText>
    <label>New Approved Capacity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>