force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_Approved_Capacity_Under_2_1_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_Approved_Capacity_Under_2_1_2__c</fullName>
    <label>New Approved Capacity (Under 2 1/2)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>