force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_Approved_Under_2_5_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_Approved_Under_2_5_Capacity__c</fullName>
    <formula>CLQ_Program__r.CLQ_Approved_Capacity_Under_2_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Approved Capacity (Under 2 1/2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>