force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_BIRN_Site_IRN__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_BIRN_Site_IRN__c</fullName>
    <label>New Site IRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>