force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_City__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_City__c</fullName>
    <label>New City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>