force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New County</label>
    <referenceTo>CLQ_County__c</referenceTo>
    <relationshipName>Program_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>