force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_Phone_Number__c</fullName>
    <label>New Phone Number</label>
    <type>Phone</type>
</CustomField>