force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_Site_Name__c</fullName>
    <label>New Site Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>