force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_State__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_State__c</fullName>
    <label>New State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLQ_All_States</valueSetName>
    </valueSet>
</CustomField>