force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_Street_Address_1__c</fullName>
    <label>New Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>