force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_New_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_Zip_Code__c</fullName>
    <label>New Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>