force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_No_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_No_Expiration_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Expiration Date</label>
    <type>Checkbox</type>
</CustomField>