force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_No_of_Children_at_Home__c.field-meta.xml
<CustomField>
    <fullName>CLQ_No_of_Children_at_Home__c</fullName>
    <description>If the Family Child Care program is located in an applicant&apos;s residence, specify the total number of children that will be in the home at one time, excluding the applicant’s children over 6 years of age.</description>
    <inlineHelpText>If the Family Child Care program is located in an applicant&apos;s residence, specify the total number of children that will be in the home at one time, excluding the applicant’s children over 6 years of age.</inlineHelpText>
    <label>No. of Children at Home</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - 6 (Type B)</fullName>
            </value>
            <value>
                <fullName>7 - 12 (Type A)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>