force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_None_of_section_5_criteria_apply__c.field-meta.xml
<CustomField>
    <fullName>CLQ_None_of_section_5_criteria_apply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>None of section 5 criteria applicable</label>
    <type>Checkbox</type>
</CustomField>