force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Number_of_Residents__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Number_of_Residents__c</fullName>
    <label>Number of Residents</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>