force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Object_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Id</label>
    <type>Text</type>
</CustomField>