force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Old_City__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Old_City__c</fullName>
    <description>Old Program Address</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>