force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Old_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Old_County__c</fullName>
    <description>Contains Program&apos;s Old Address</description>
    <label>County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>