force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Old_Program_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Old_Program_Email_Address__c</fullName>
    <description>Old Program Email</description>
    <label>Program Email Address</label>
    <type>Email</type>
</CustomField>