force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Old_Program_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Old_Program_Street_Address_2__c</fullName>
    <description>Old Address of the Program</description>
    <label>Program Street Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>