force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Old_Program_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Old_Program_Street_Address__c</fullName>
    <description>Current address of the Program</description>
    <label>Program Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>