force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Old_Submission_Date1__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Old_Submission_Date1__c</fullName>
    <description>Retains the Submission Date when revised to the PT when it is first created</description>
    <label>XOld Submission Date1</label>
    <type>DateTime</type>
</CustomField>