force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Old_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Old_Transaction_Status__c</fullName>
    <label>Old Transaction Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>