force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Old_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Old_Zip_Code__c</fullName>
    <description>Old Program Address</description>
    <label>Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>