force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_One_Parent_Per_Child_On_Premise__c.field-meta.xml
<CustomField>
    <fullName>CLQ_One_Parent_Per_Child_On_Premise__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Programs in which the Ohio Department of Job and Family Services determines that at least one parent, custodian, or guardian of each child is on the premises of the program offering child care and is readily accessible at all times, except that child care provided on the premises at which a parent, custodian, or guardian is employed more than two and one-half hours a day shall be licensed.</description>
    <inlineHelpText>Programs in which the Ohio Department of Job and Family Services determines that at least one parent, custodian, or guardian of each child is on the premises of the program offering child care and is readily accessible at all times, except that child care</inlineHelpText>
    <label>One Parent Per Child On-Premise</label>
    <type>Checkbox</type>
</CustomField>