force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_OOS_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OOS_Program_Number__c</fullName>
    <description>This is the Program Number of the Program</description>
    <formula>CLQ_Program__r.CLQ_Program_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Number</label>
    <type>Text</type>
</CustomField>