force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_OOS_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OOS_Program_Type__c</fullName>
    <label>OOS Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCC - Type B</fullName>
            </value>
            <value>
                <fullName>FCC - Type A</fullName>
            </value>
            <value>
                <fullName>Child Care Center</fullName>
            </value>
            <value>
                <fullName>Day Camp</fullName>
            </value>
            <value>
                <fullName>In-Home Aide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>