force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_OOS_ProgramNumber__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OOS_ProgramNumber__c</fullName>
    <description>This is the OOS Program Number (text field)</description>
    <label>OOS Program Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>