force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Operate_for_2_or_less_weeks__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Operate_for_2_or_less_weeks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A program of child care that operates for two or less consecutive weeks.</description>
    <inlineHelpText>A program of child care that operates for two or less consecutive weeks.</inlineHelpText>
    <label>Operate for 2 or less weeks</label>
    <type>Checkbox</type>
</CustomField>