force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Operating_in_Existing_School__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Operating_in_Existing_School__c</fullName>
    <description>If you are only serving school-age children, will you be operating in an existing public school or chartered nonpublic school building?</description>
    <inlineHelpText>If you are only serving school-age children, will you be operating in an existing public school or chartered nonpublic school building?</inlineHelpText>
    <label>Operating in Existing School</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>