force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_OPIN_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OPIN_Number__c</fullName>
    <description>What is your OPIN number?</description>
    <inlineHelpText>What is your OPIN number?</inlineHelpText>
    <label>OPIN Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>