force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Organization_email_address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Organization_email_address__c</fullName>
    <label>Organization email address</label>
    <type>Email</type>
</CustomField>