force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Organization_IRN__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Organization_IRN__c</fullName>
    <description>What is the Information Retrieval Number (IRN) for the Organization/Affiliation that will operate this program?</description>
    <inlineHelpText>What is the Information Retrieval Number (IRN) for the Organization/Affiliation that will operate this program?</inlineHelpText>
    <label>Organization IRN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>