force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Original_Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Original_Program_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipName>Program_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>