force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Other_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Closure_Reason__c</fullName>
    <label>Other Closure Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>