force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Other_Toxic_Substances__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Toxic_Substances__c</fullName>
    <label>Other Toxic Substances</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>