force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Override__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Override</label>
    <type>Checkbox</type>
</CustomField>