force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Owner_Type__c</fullName>
    <label>Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation/LLC</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>