force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Ownership_Type__c</fullName>
    <formula>TEXT( CLQ_Associated_Organization__r.Ownership )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership Type</label>
    <type>Text</type>
</CustomField>