force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Payment_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Payment_County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IHA Payment County</description>
    <label>Payment County</label>
    <referenceTo>CLQ_County__c</referenceTo>
    <relationshipName>IHA_Program_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>